<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="114dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="565dp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:layout_gravity="center_horizontal"
        android:text="@string/hello" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="228dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="501dp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:layout_gravity="center_horizontal"
        android:text="@string/enter_the_day_of_the_week" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="420dp"
        android:autofillHints="@string/enter_the_day_of_the_week2"
        android:ems="10"
        android:hint="@string/enter_the_day_of_the_week2"
        android:inputType="textPersonName"
        android:labelFor="@id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="316dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="327dp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit_for_weather_report" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="235dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="298dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="102dp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/textview" />
</RelativeLayout>